Feat: Styling for the page and adjusted routes link for App.js

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,8 +11,8 @@
     box-shadow: none;
 }
 
-.navbar, .navbar-expand-md, .navbar-dark, .bg-primary {
-  margin: 0 10% 0 10%
+#search-bar-style {
+  display: contents;
 }
 
 .card-body {
