Feat: Renovated structure and styling
Added new color scheme,
Restructure how comments are appearing in the queries.
Took button for create query off and used a link instead.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,12 @@
-$primary: #e76f51;
+$primary: #4a4e69;
+$color-scheme-tint: scale-color($primary, $lightness: 70%);
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 body {
-  font-family: 'Comic Neue'
+  font-family: 'Comic Neue';
+  background-color: #4a4e69;
 }
 .form-control-borderless {
     border: none;
@@ -18,7 +21,17 @@ body {
 #search-bar-style {
   display: contents;
 }
+#navBar {
+  margin: 0 10%;
+}
+
+.jumbotron {
+  font-family: 'Indie Flower';
+  text-align: center;
+  background: rgb(2,0,36);
+  background: linear-gradient(22deg, rgba(2,0,36,1) 0%, rgba(74,78,105,1) 84%);
+}
 
 .card-body {
-  padding: 0;
+  background-color: $color-scheme-tint;
 }
